@@ -31,7 +31,8 @@ dependencies {
   }
   compileOnly 'org.osgi:org.osgi.service.component.annotations:1.3.0'
   testImplementation project(':core-spi-test')
-  testCompile project(path: ':xml', configuration: 'testArchives')
+  testImplementation 'org.xmlunit:xmlunit-core:2.6.0'
+  testImplementation 'org.xmlunit:xmlunit-matchers:2.6.0'
 }
 
 // For EhPomMangle
@@ -40,18 +41,11 @@ dependencies {
   pomOnlyProvided 'javax.transaction:jta:1.1', 'org.codehaus.btm:btm:2.1.4'
 }
 
-test {
-  if (testJava.javaVersion.isJava9Compatible()) {
-    jvmArgs += ['--add-modules', 'java.xml.bind']
-  }
-}
-
 jar {
   bnd (
     'Bundle-SymbolicName': 'org.ehcache.transactions',
     'Export-Package': 'org.ehcache.transactions.xa.*',
     'Import-Package': 'bitronix.tm.*;resolution:=optional, javax.transaction.*;resolution:=optional, org.ehcache.xml.*;resolution:=optional, *',
-    'Service-Component': 'OSGI-INF/*.xml'
   )
 }
 
